--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,7 @@ header.header {
 }
 
 .orange_btn {
-  background: #ff6d2f;
+  background: #4BAF50;
   border-radius: 10px;
   margin-left: 2px;
   display: flex;
